# boxoban-gymnasium

./: README.md  play.py  pyproject.toml
src/boxoban/: __init__.py  env.py  registration.py  wrappers.py
tests/: test_env.py  test_registration_and_vector.py  test_wrappers.py
